src/main/java/sw04/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
javadoc
-sourcepath
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04
-source
17
-classpath
/Applications/BlueJ.app/Contents/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Java/javafx-base-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-graphics-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-controls-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-fxml-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-controls-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-web-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-media-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-base-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-media-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-graphics-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-swing-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/junit-4.12.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-params-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-api-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-suite-api-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-vintage-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-engine-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-launcher-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-commons-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Java/opentest4j-1.2.0.jar:/Applications/BlueJ.app/Contents/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.base.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.controls.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.media.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.properties.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.swing.jar:/Applications/BlueJ.app/Contents/Java/javafx/javafx.web.jar:/Users/sachavogel/workspace-studies/oop/src/main/java/sw04
-d
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
sw04
-windowtitle
sw04
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/17/docs/api/
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Vehicle.java
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Motor.java
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Switchable.java
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Lamp.java
<---- end of javadoc command ---->
Loading source file /Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Vehicle.java...
Loading source file /Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java...
Loading source file /Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Motor.java...
Loading source file /Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Switchable.java...
Loading source file /Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Lamp.java...
Constructing Javadoc information...
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:3: error: package sw03 does not exist
import sw03.Point;
           ^
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:6: error: cannot find symbol
    private Point pStart;
            ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:7: error: cannot find symbol
    private Point pEnd;
            ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:13: error: cannot find symbol
    public Line(final Point pStart, final Point pEnd) {
                      ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:13: error: cannot find symbol
    public Line(final Point pStart, final Point pEnd) {
                                          ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:22: error: cannot find symbol
    public void setpStart(Point pStart) {
                          ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:26: error: cannot find symbol
    public Point getpStart() {
           ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:34: error: cannot find symbol
    public void setpEnd(Point pEnd) {
                        ^
  symbol:   class Point
  location: class Line
/Users/sachavogel/workspace-studies/oop/src/main/java/sw04/Line.java:38: error: cannot find symbol
    public Point getpEnd() {
           ^
  symbol:   class Point
  location: class Line
9 errors
